# teknofest-agv-explore

./: .gitignore  COORDINATOR_TIMELINE.md  KURULUM_REHBERI.md  RASPBERRY_PI_KULLANIM.md  RASPBERRY_PI_SETUP.md  README.md  ROBOT_SPECIFICATIONS.md  TEST_PLANI.md
src/my_robot_bringup/: CMakeLists.txt  README.md  package.xml
src/my_robot_bringup/arduino/: AI_EXPLANATION_PROMPT.md  ARDUINO_COMMUNICATION_COMPARISON.md  ARDUINO_MEGA_SETUP.md  ARDUINO_SERIAL_PROTOCOL.md  SETUP_SUMMARY.md  WIRING_DIAGRAM.md
src/my_robot_bringup/arduino/firmware/: README.md  ROSArduinoBridge.ino  commands.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  servos.h
src/my_robot_bringup/config/: ekf.yaml  explore_params.yaml  laser_filter.yaml  mapper_params_online_async.yaml  my_robot_bridge.aml  my_robot_controllers.yaml  nav2_params.yaml  slam_toolbox.yaml
src/my_robot_bringup/launch/: autonomous_exploration.launch.py  gazebo_nav.launch.py  gazebo_slam.launch.py  gazebo_slam_explore.launch.py  real_robot_bringup.launch.py  real_robot_control_bringup.launch.py  real_robot_control_slam.launch.py  real_robot_exploration.launch.py  real_robot_ros2_control.launch.py  slam_navigation.launch.py
src/my_robot_bringup/launch/arduino/: arduino_robot_bringup.launch.py
src/my_robot_bringup/maps/: my_map.yaml
src/my_robot_bringup/rviz/: exploration.rviz  nav2.rviz  rviz.rviz
src/my_robot_description/: CMakeLists.txt  README.md  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/models/my_robot/: model.config  model.sdf
src/my_robot_description/ros2_control/: my_robot.ros2_control.xacro
src/my_robot_description/urdf/: my_robot.materials.xacro  my_robot.ros2_control.xacro  my_robot.urdf.xacro
src/my_robot_description/worlds/: empty_slam_world.sdf  example_walls_world.sdf
src/my_robot_explore/: README.md  package.xml  setup.cfg  setup.py
src/my_robot_explore/launch/: explore.launch.py
src/my_robot_explore/my_robot_explore/: arduino_bridge.py  frontier_explorer.py  odom_tf_broadcaster.py  stm32_serial_bridge.py
src/my_robot_hardware/: CMakeLists.txt  HARDWARE_COMPARISON.md  README.md  my_robot_hardware.xml  package.xml
src/my_robot_hardware/hardware/: my_robot_system.cpp
src/my_robot_hardware/hardware/include/my_robot_hardware/: arduino_comms.hpp  my_robot_system.hpp
src/my_robot_hardware/include/my_robot_hardware/: wheel.hpp
